<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>nl.topicus</groupId>
	<artifactId>wicket-cdi-parent</artifactId>
	<packaging>pom</packaging>
	<version>6.0.0</version>
	<name>Wicket-CDI Parent</name>
	<description>Integrates Wicket with CDI containers</description>
	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<scm>
		<url>https://github.com/papegaaij/wicket-cdi</url>
		<connection>scm:git:git@github.com:papegaaij/wicket-cdi</connection>
		<tag>HEAD</tag>
	</scm>
	<repositories>
		<repository>
			<id>central</id>
			<url>http://repo-onderwijs.topicus.local/artifactory/repo</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>snapshots</id>
			<url>http://repo-onderwijs.topicus.local/artifactory/repo</url>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
	</repositories>
	
	<modules>
		<module>wicket-cdi</module>
		<module>wicket-cdi-examples</module>
	</modules>
	<properties>
		<wicket.version>6.0.0</wicket.version>
		<junit.version>4.10</junit.version>
		<jetty.version>6.1.25</jetty.version>
		<slf4j.version>1.7.0</slf4j.version>
		<log4j.version>1.2.17</log4j.version>
		<weld.version>1.1.9.Final</weld.version>
		<seam.conversation.version>3.0.0.Final</seam.conversation.version>
		<cdi.version>1.0-SP4</cdi.version>
		<servlet.version>2.5</servlet.version>
	</properties>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>nl.topicus</groupId>
				<artifactId>wicket-cdi</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
			    <groupId>javax.enterprise</groupId>
			    <artifactId>cdi-api</artifactId>
			    <version>${cdi.version}</version>
			</dependency>


			<dependency>
				<groupId>org.jboss.weld</groupId>
				<artifactId>weld-core</artifactId>
				<version>${weld.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.weld.servlet</groupId>
				<artifactId>weld-servlet-core</artifactId>
				<version>${weld.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.el</groupId>
				<artifactId>javax.el-api</artifactId>
				<version>2.2.1</version>
			</dependency>
			<dependency>
				<groupId>javax.servlet.jsp</groupId>
				<artifactId>javax.servlet.jsp-api</artifactId>
				<version>2.2.1</version>
			</dependency>			

			<dependency>
				<groupId>org.jboss.seam.conversation</groupId>
				<artifactId>seam-conversation-spi</artifactId>
				<version>${seam.conversation.version}</version>
			</dependency>
			<dependency>
				<groupId>org.jboss.seam.conversation</groupId>
				<artifactId>seam-conversation-weld</artifactId>
				<version>${seam.conversation.version}</version>
			</dependency>

			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>servlet-api</artifactId>
				<version>${servlet.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.apache.wicket</groupId>
				<artifactId>wicket-core</artifactId>
				<version>${wicket.version}</version>
			</dependency>
			
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit.version}</version>
				<scope>test</scope>
			</dependency>
			
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-ext</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j.version}</version>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>${log4j.version}</version>
			</dependency>

			<dependency>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>jetty</artifactId>
				<version>${jetty.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>jetty-util</artifactId>
				<version>${jetty.version}</version>
				<scope>provided</scope>
			</dependency>
			<dependency>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>jetty-management</artifactId>
				<version>${jetty.version}</version>
				<scope>provided</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<resources>
			<resource>
				<filtering>false</filtering>
				<directory>src/main/resources</directory>
			</resource>
			<resource>
				<filtering>false</filtering>
				<directory>src/main/java</directory>
				<includes>
					<include>**</include>
				</includes>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
		</resources>
		<testResources>
			<testResource>
				<filtering>false</filtering>
				<directory>src/test/java</directory>
				<includes>
					<include>**</include>
				</includes>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.6</version>
				<inherited>true</inherited>
				<configuration>
					<argLine>-Xmx1536m -XX:MaxPermSize=384m -Djava.awt.headless=true</argLine>
					<systemPropertyVariables>
						<property>
							<name>java.awt.headless</name>
							<value>true</value>
						</property>
					</systemPropertyVariables>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
						<goals>deploy</goals>
						<autoVersionSubmodules>true</autoVersionSubmodules>
				</configuration>
			</plugin>
			<plugin>
				<inherited>true</inherited>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<optimize>true</optimize>
					<debug>true</debug>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.mortbay.jetty</groupId>
				<artifactId>maven-jetty-plugin</artifactId>
				<version>${jetty.version}</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-eclipse-plugin</artifactId>
				<version>2.8</version>
				<configuration>
					<downloadSources>true</downloadSources>
				</configuration>
			</plugin>
			<!--plugin>
				<groupId>com.mycila.maven-license-plugin</groupId>
				<artifactId>maven-license-plugin</artifactId>
				<configuration>
					<failIfMissing>true</failIfMissing>
					<aggregate>true</aggregate>
					<excludes>
						<exclude>license-header.txt</exclude>
						<exclude>**/src/test/resources/**</exclude>
						<exclude>**/fullcalendar.css</exclude>
						<exclude>**/fullcalendar.js</exclude>
						<exclude>**/fullcalendar.min.js</exclude>
						<exclude>**/fullcalendar.print.css</exclude>
						<exclude>**/src/main/webapp/**</exclude>
						<exclude>eclipse-formatter.xml</exclude>
						<exclude>build-number.txt</exclude>
					</excludes>
					<header>license-header.txt</header>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin-->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>
